--- a/src/components/organisms/LiveControlPanel.astro
+++ b/src/components/organisms/LiveControlPanel.astro
@@ -4,9 +4,9 @@ import CyberButton from '../atoms/CyberButton.astro';
 import MarketBreadth from './MarketBreadth.astro';
 ---
 
-<div class="flex items-center gap-4 flex-1 min-w-0">
+<div class="flex items-center gap-2 shrink-0 min-w-0">
     <!-- Breadth Visual -->
-    <div class="flex-1 min-w-0">
+    <div class="shrink-0 min-w-0">
         <MarketBreadth up={0} down={0} flat={0} total={0} />
     </div>
 
